# gamelib

./: CMakeLists.txt  README.md  readme.txt
data/: data.txt  font.inc.c  player.png.inc.c
include/: interfaces.h  libgame.h  math.h  tosh.h  utils.h
include/behaviours/: movement.h  playermovement.h  sprite.h
include/config/: programregister.inc.c
include/core/: behaviour.h  input.h  object.h  objectstore.h  position.h  program.h  programstack.h  tilemap.h
include/demos/: test.h
include/games/: cmd.h  test.h
include/games/arpg/: arpg.h
include/graphics/: animatedsprite.h  dynamicmesh.h  framebuffer.h  framebufferqueue.h  geoobject.h  interfaces.h  lights.h  renderqueue.h  renderqueuesorted2d.h  renderqueuesortedz.h  sprite.h  textureatlas.h  texturecache.h  transition.h
include/gui/: gui.h  guielements.h  window.h  windowmanager.h
include/math/: vectors.h
include/objects/: commandproc.h  console.h  debugconsole.h  skybox.h
include/physics/: collider.h  collider2d.h  types.h
include/tools/tilemapedit/: editor.h
include/tools/tilemapedit/gui/: gui_MAPEDIT.h  gui_editor.h
include/utils/: containers.h  math.h  timekeep.h  types.h  utils.h
lib/include/styles/: green.h  green2.h  style_candy.h
media/: candy_st.rgs  candy_ts.rgs  media.txt
source/: main.cpp  utils.cpp
source/behaviours/: movement.cpp  playermovement.cpp
source/core/: behaviour.cpp  core.cpp  input.cpp  object.cpp  objectstore.cpp  position.cpp  program.cpp  programstack.cpp  tilemap.cpp
source/demos/: cmd.cpp  test.cpp
source/games/: test.cpp
source/games/arpg/: arpg.cpp
source/games/village/: village.cpp
source/graphics/: animatedsprite.cpp  drawing.cpp  dynamicmesh.cpp  framebuffer.cpp  graphics.cpp  lights.cpp  renderqueue.cpp  renderqueuesorted2d.cpp  renderqueuesortedz.cpp  sprite.cpp  textureatlas.cpp  texturecache.cpp
source/graphics/transitions/: fadetransition.cpp  iristransition.cpp  squaretransition.cpp
source/gui/: gui.cpp  window.cpp
source/objects/: commandproc.cpp  console.cpp  debugconsole.cpp  geoobject.cpp  skybox.cpp
source/physics/: collider.cpp  collider2d.cpp
source/tools/: datapack.cpp  tilemapedit.cpp
